# melba

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  prometheus.yaml
.github/workflows/: ci.yml  release-image.yml
.sqlx/: query-17b362a0a1becd3d5898391d0aec832c33c1a3468aaf10a2fd6fa15712f7a458.json  query-1b6ce0be3ef263bb51629e16d33cbcfc63af833ac9b91e50699822261f853e09.json  query-51ff04b6a6618736d46e5d02bb24b81b04ebdf2393896affa8e77cf6ae910800.json  query-6ff9b559ad564646ba074f5c59d372f1448e25677000bc59499e0e04109acaa2.json  query-a2b312eefa5b9fec7d53d2682f92d9e382c0dc2e21acf3cdc6d22f9968318f8a.json  query-a7d1d8e810f22ef8ff0f51ef9fcaaa82b8f24e263761d1329448b48891a50248.json
config/: default.toml  default.yaml  development.example.toml  development.toml  development.yaml  production.example.toml  production.toml  production.yaml
docker/: .dockerignore  Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INSTALL.md  MAINTENANCE.md  architecture.md  maintainance.md
grafana/dashboards/: dashboard.yaml  metrics-dashboard.json
scripts/: generate_fixtures.sh  init_db.sh  reinit_db.sh
scripts/sql/: 001_CreateSchema.sql  001_DeleteSchema.sql  002_CreateTable.sql  003_CreateFunction.sql  004_CreateTrigger.sql  005_CreateIndex.sql  006_PopulateTable.sql  006_PopulateTableDEV.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/archival/: archival_response.rs  client.rs  (+6 more)
tests/: edit_data.rs  edit_note.rs  internet_archive_urls.rs  main.rs
(+34 files in other folders)
