[package]
name = "mb-exurl-ia-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.10"
tokio = {version = "1.37.0", features = ["full"]}
sqlx = {version = "0.7.4", features = ["runtime-async-std-native-tls","postgres", "migrate"]}
reqwest = "0.12.4"
serde_json = "1.0.116"
linkify = "0.10.0"
mb-rs = {git = "https://github.com/yellowHatpro/Rust-Playground.git"}
serde = { version = "1.0.198", features = ["derive"] }
chrono = { version = "0.4.38" , features = ["serde"] }
dotenv = "0.15.0"
clap = {version = "4.5.7", features = ["color", "derive"]}
colorize = "0.1.0"